added google translate
git-svn-id: https://plugins.svn.wordpress.org/meta-widget-customizer/trunk@625890 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/meta-widget-customizer.css
+++ b/meta-widget-customizer.css
@@ -51,3 +51,11 @@
 .tab_content p {
     margin: 0;
 }
+
+#meta_widget_customizer ul form select {
+    margin: 10px;
+}
+
+.gmnoprint, .google-src-text, #google-infowindow, #google-feedback-frame {
+    display: none !important;
+}
