--- a/meta-widget-customizer.css
+++ b/meta-widget-customizer.css
@@ -1,11 +1,14 @@
 #tabs_container {
     border-bottom: 1px solid #ccc;
+    padding-bottom: 0 !important;
+    margin-top: 5px;
 }
 #tabs {
     list-style: none;
     padding: 5px 0 4px 0;
     margin: 0 0 0 10px;
     font: 0.75em arial;
+    white-space: nowrap;
 }
 #tabs li {
     display: inline;
@@ -14,34 +17,37 @@
     border: 1px solid #ccc;
     padding: 4px 6px;
     text-decoration: none;
-    background-color: #eeeeee;
+    /* background-color: #eeeeee; */
     border-bottom: none;
     outline: none;
     border-radius: 5px 5px 0 0;
     -moz-border-radius: 5px 5px 0 0;
     -webkit-border-top-left-radius: 5px;
     -webkit-border-top-right-radius: 5px;
+    font-weight: normal;
 }
 #tabs li a:hover {
-    background-color: #dddddd;
+    /* background-color: #dddddd; */
     padding: 4px 6px;
 }
 #tabs li.active a {
     border-bottom: 1px solid #fff;
-    background-color: #fff;
+    /* background-color: #fff; */
     padding: 4px 6px 5px 6px;
     border-bottom: none;
+    font-weight: bold;
 }
 #tabs li.active a:hover {
-    background-color: #eeeeee;
+    /* background-color: #eeeeee; */
     padding: 4px 6px 5px 6px;
     border-bottom: none;
 }
  
 #tabs_content_container {
     border: 1px solid #ccc;
-    border-top: none;
-    padding: 10px;
+    border-top: none !important;
+    padding: 10px !important;
+    margin-bottom: 10px;
 }
 
 .tab_content {
@@ -52,10 +58,33 @@
     margin: 0;
 }
 
+#meta_widget_customizer p.submit {
+margin-bottom: auto;
+}
+
+/*
 #meta_widget_customizer ul form select {
     margin: 10px;
 }
+*/
 
 .gmnoprint, .google-src-text, #google-infowindow, #google-feedback-frame {
     display: none !important;
+}
+
+#googlesitesearch table {
+    border: medium none;
+}
+
+#googlesitesearch td {
+    border: medium none;
+}
+
+#meta_widget_customizer > ul > * {
+    border-top: 0 none;
+    padding: 0 0 6px;
+}
+
+#meta_widget_customizer > ul > *:last-child {
+    padding: 0;
 }
